# BarPower

./: Dockerfile  README.md  iv.yaml  pyproject.toml  tasks.py
.circleci/: config.yml
.github/workflows/: build.yml  sync.yml  versions.yml
bar_power/: Client.py  ClientType.py  Order.py  Visit.py  Visits.py  config.py  handler.py  logger.py  visit.py  visits.py
docs/: documentacion.md  infoadicional.md
src/: Client.py
tests/: test_config.py  test_handler.py  test_visits.py
