[tool.poetry]
name = "barpower"
version = "0.1.0"
description = "\"Aplicacion para aumento de productividad en bares\""
authors = ["Joaquín Alejandro España Sánchez <joaquinalejandroespana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
