[tool.poetry]
name = "barpower"
version = "0.1.0"
description = "\"Aplicacion para aumento de productividad en bares\""
authors = ["Joaquín Alejandro España Sánchez <joaquinalejandroespana@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
install         = {cmd="python3 bar_power/*.py", help="Instala las distintas clases o módulos que tenga el proyecto"}
installdeps     = {cmd="poetry install", help="Instala las dependencias necesarias para que la aplicación funcione"}
test           = {cmd="pytest tests/test_visits.py", help="Comprueba que el resultado(comportamiento) del programa sea el correcto"}
check           = {cmd="py3compile bar_power/*.py", help="Comprueba la sintaxis de los ficheros python"}
clean           = {cmd="rm -rf .pytest_cache ./**/__pycache__"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
